--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "testService",
+  "version": "0.0.1",
   "main": "testService.js",
   "homepage": "https://github.com/bradwbradw/test",
   "authors": [
